# snajper

./: .clang-tidy  CMakeLists.txt
src/: buffer.hh  editor.hh  fs.hh  main.cc
